--- a/assets/style.css
+++ b/assets/style.css
@@ -31,11 +31,16 @@ body {
 
 #roll-list{
     list-style: none;
-    margin: 0;
 }
 
 li {
-    margin: 0;
     font-size: 20px;
-    background-color: aqua;
+    border-radius: 1em;
+    width: 25%;
+}
+
+.li-item {
+    margin-top: 10px !important;
+    background-color: gray;
+    border-radius: 1em;
 }
